Renamed a few codecraft to designcraft

--- a/about.html
+++ b/about.html
@@ -30,18 +30,11 @@
     </nav>
   </header>
 
-  <!-- Hero Section -->
-  <section class="hero">
-    <div class="hero-overlay"></div>
-    <div class="hero-content">
-      <button class="btn-primary">See What We Do</button>
-    </div>
-  </section>
 
   <section class="about-section">
     <div class="about-intro">
       <p>
-        At CodeCraft, we bring your digital dreams to life through cutting-edge IT and marketing solutions, designed to help your business thrive in a competitive world.
+        At DesignCraft, we bring your digital dreams to life through cutting-edge IT and marketing solutions, designed to help your business thrive in a competitive world.
       </p>
     </div>
   
