--- a/careers.html
+++ b/careers.html
@@ -35,7 +35,7 @@
 
   <section class="career-section">
     <div class="career-intro">
-      <h2>Build Your Career at CodeCraft</h2>
+      <h2>Build Your Career at DesigCraft</h2>
       <p>
         Join our team of passionate creators and problem-solvers, dedicated to crafting exceptional digital experiences. 
         At CodeCraft, we believe in empowering talent, fostering creativity, and driving innovation to help our clients thrive.
