--- a/careers.html
+++ b/careers.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CodeCraft</title>
+  <title>Careers At DesignCraft</title>
   <link rel="stylesheet" href="career.css">
 </head>
 <body>
@@ -35,7 +35,7 @@
 
   <section class="career-section">
     <div class="career-intro">
-      <h2>Build Your Career at DesigCraft</h2>
+      <h2>Build Your Career at DesignCraft</h2>
       <p>
         Join our team of passionate creators and problem-solvers, dedicated to crafting exceptional digital experiences. 
         At CodeCraft, we believe in empowering talent, fostering creativity, and driving innovation to help our clients thrive.
@@ -45,7 +45,7 @@
     <div class="company-culture">
         <h3 class="section-title">Company Culture</h3>
       <p>
-        At CodeCraft, we’re more than a team—we’re a family. We value collaboration, continuous learning, and celebrating success together. 
+        At DesignCraft, we’re more than a team—we’re a family. We value collaboration, continuous learning, and celebrating success together. 
         Whether you're a tech enthusiast or a creative visionary, you'll find a home here to grow your skills and make an impact.
       </p>
     </div>
@@ -75,7 +75,7 @@
     <div class="why-us">
         <h3 class="section-title">Why Work For Us?</h3>
       <p><strong>Innovative Work Culture:</strong> Join a dynamic team that is passionate about using the latest technologies and creative solutions to drive business success.</p>
-      <p><strong>Career Growth Opportunities:</strong> At CodeCraft, your career will always be evolving. We offer professional development programs, mentorship, and growth opportunities to help you advance in your field.</p>
+      <p><strong>Career Growth Opportunities:</strong> At DesignCraft, your career will always be evolving. We offer professional development programs, mentorship, and growth opportunities to help you advance in your field.</p>
       <p><strong>Flexibility & Work-Life Balance:</strong> We understand the importance of balancing work with personal life, so we offer flexible remote work options and a supportive work environment.</p>
       <p><strong>Collaborative Team:</strong> Work with a group of motivated, talented individuals who value collaboration, learning from each other, and solving problems together.</p>
       <p><strong>Impactful Projects:</strong> Contribute to exciting projects that drive real change for businesses and impact their digital transformation.</p>
