--- a/Testimonials.html
+++ b/Testimonials.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CodeCraft</title>
+  <title>Testimonials about DesignCraft</title>
   <link rel="stylesheet" href="testi.css">
 </head>
 <body>
