modified margin top

--- a/careers.html
+++ b/careers.html
@@ -38,7 +38,7 @@
       <h2>Build Your Career at DesignCraft</h2>
       <p>
         Join our team of passionate creators and problem-solvers, dedicated to crafting exceptional digital experiences. 
-        At CodeCraft, we believe in empowering talent, fostering creativity, and driving innovation to help our clients thrive.
+        At DesignCraft, we believe in empowering talent, fostering creativity, and driving innovation to help our clients thrive.
       </p>
     </div>
   
