Fixed the services boxes with accurate infomation

--- a/about.html
+++ b/about.html
@@ -88,7 +88,7 @@
         <p>
           What sets us apart is our focus on seamless collaboration and end-to-end support, ensuring our clients achieve their goals efficiently and effectively.
         </p>
-        <a href="#" class="btn-learn-more">Learn More</a>
+        <a href="casestudies.html" class="btn-learn-more">Learn More</a>
       </div>
     </div>
   </section>
