--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
   <section class="hero">
     <div class="hero-overlay"></div>
     <div class="hero-content">
+      <a href="pricing.html">
       <button class="btn-primary" id="servicesButton">Explore Our Services</button>
+    </a>
        <!-- Popup -->
     </div>
   </section>
