--- a/pricing.html
+++ b/pricing.html
@@ -34,7 +34,9 @@
   <section class="hero">
     <div class="hero-overlay"></div>
     <div class="hero-content">
+      <a href="contact.html">
       <button class="btn-primary">Get A Free Qoute</button>
+    </a>
     </div>
   </section>
 
