fixed the navigation

--- a/pricing.html
+++ b/pricing.html
@@ -56,7 +56,7 @@
           customers."
         </p>
         <p class="price">Starting At</p>
-        <h1>R33 770</h1><p>/ Month</p>
+        <h1>R3 000</h1><p>/ Month</p>
       </div>
       <div class="pricing-box">
         <h3>Web Development And Continuous Support</h3>
@@ -67,7 +67,7 @@
           exceptional user experiences while staying secure and up-to-date."
         </p>
         <p class="price">Starting At</p>
-        <h1>R33 770</h1><p>/ Month</p>
+        <h1>R2 700</h1><p>/ Month</p>
       </div>
       <div class="pricing-box">
         <h3>Mobile App Development And Support</h3>
@@ -78,7 +78,7 @@
           technologies."
         </p>
         <p class="price">Starting At</p>
-        <h1>R33 770</h1><p>/ Month</p>
+        <h1>R5 300</h1><p>/ Month</p>
       </div>
     </div>
   </section>
@@ -97,7 +97,10 @@
           <li>Content Marketing</li>
           <li>Growth Analytics and Reporting</li>
         </ol>
+        <a href="marketing.html">
         <button>Elevate Your Presence</button>
+      </a>
+
       </div>
       <div class="service-box">
         <h3>Web Development and Support</h3>
@@ -110,7 +113,9 @@
           <li>Custom integrations with third-party tools</li>
           <li>Growth Analytics and Reporting</li>
         </ol>
-        <button>Build Your Website</button>
+        <a href="webdev.html">
+        <button>Elevate Your Presence</button>
+      </a>
       </div>
       <div class="service-box">
         <h3>Mobile App Development</h3>
@@ -123,7 +128,9 @@
           <li>User testing and feedback-driven improvement</li>
           <li>Growth Analytics and Reporting</li>
         </ol>
-        <button>Launch Your App</button>
+        <a href="appdev.html">
+          <button>Elevate Your Presence</button>
+        </a>
       </div>
     </div>
   </section>
