Updated the title and meta tags

--- a/appdev.html
+++ b/appdev.html
@@ -3,8 +3,35 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>DesignCraft Mobile Apps</title>
-  <link rel="stylesheet" href="service.css">
+  
+  <!-- Title Tag -->
+  <title>App Development Services | Custom Mobile Apps for iOS & Android | DesignCraft</title>
+
+  <!-- Meta Description -->
+  <meta name="description" content="DesignCraft specializes in custom mobile app development for iOS and Android. We create user-friendly, high-performance apps tailored to your business needs.">
+
+  <!-- Open Graph Tags for Social Media -->
+  <meta property="og:title" content="App Development Services - DesignCraft">
+  <meta property="og:description" content="Get custom mobile app development services for iOS and Android. DesignCraft builds high-quality, responsive apps that deliver exceptional user experiences.">
+  <meta property="og:image" content="link-to-image.jpg">
+  <meta property="og:url" content="https://designcrafts.netlify.app/app-development">
+  <meta property="og:type" content="website">
+
+  <!-- Twitter Card Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="App Development Services - DesignCraft">
+  <meta name="twitter:description" content="Create custom mobile apps with DesignCraft. We offer iOS and Android app development services, building user-friendly, scalable apps for businesses.">
+  <meta name="twitter:image" content="link-to-image.jpg">
+  
+  <!-- Link to External CSS -->
+  <link rel="stylesheet" href="style.css">
+
+  <!-- Favicon -->
+  <link rel="icon" href="images/favicon.png" type="image/x-icon">
+
+  <!-- Canonical Link to Avoid Duplicate Content Issues -->
+  <link rel="canonical" href="https://designcrafts.netlify.app/app-development">
+
 </head>
 <body>
   <!-- Navbar -->
