--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,35 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contact DesignCraft</title>
-  <link rel="stylesheet" href="contact.css">
+  
+  <!-- Title Tag -->
+  <title>Contact Us | Get in Touch with DesignCraft for IT Solutions</title>
+
+  <!-- Meta Description -->
+  <meta name="description" content="Get in touch with DesignCraft for IT solutions including web development, app development, and digital marketing. Our team is ready to help your business grow. Contact us today!">
+
+  <!-- Open Graph Tags for Social Media -->
+  <meta property="og:title" content="Contact Us - DesignCraft IT Solutions">
+  <meta property="og:description" content="Contact DesignCraft for all your IT solutions needs. Whether you need web development, app development, or digital marketing, our team is ready to assist you.">
+  <meta property="og:image" content="link-to-image.jpg">
+  <meta property="og:url" content="https://designcrafts.netlify.app/contact-us">
+  <meta property="og:type" content="website">
+
+  <!-- Twitter Card Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Contact Us - DesignCraft IT Solutions">
+  <meta name="twitter:description" content="Get in touch with DesignCraft for IT solutions. Our team is here to assist with web development, app development, and digital marketing services.">
+  <meta name="twitter:image" content="link-to-image.jpg">
+  
+  <!-- Link to External CSS -->
+  <link rel="stylesheet" href="style.css">
+
+  <!-- Favicon -->
+  <link rel="icon" href="images/favicon.png" type="image/x-icon">
+
+  <!-- Canonical Link to Avoid Duplicate Content Issues -->
+  <link rel="canonical" href="https://designcrafts.netlify.app/contact-us">
+
 </head>
 <body>
   <!-- Navbar -->
