--- a/marketing.html
+++ b/marketing.html
@@ -3,10 +3,36 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Marketing With DesignCraft</title>
-  <link rel="stylesheet" href="service.css">
+  
+  <!-- Title Tag -->
+  <title>Digital Marketing Services | Boost Your Online Presence | DesignCraft</title>
+
+  <!-- Meta Description -->
+  <meta name="description" content="DesignCraft provides expert digital marketing services, including SEO, PPC, social media marketing, and content strategies to enhance your online visibility and business growth.">
+
+  <!-- Open Graph Tags for Social Media -->
+  <meta property="og:title" content="Digital Marketing Services - DesignCraft">
+  <meta property="og:description" content="Elevate your online presence with DesignCraft's digital marketing services, including SEO, PPC, social media marketing, and custom strategies to drive traffic and conversions.">
+  <meta property="og:image" content="link-to-image.jpg">
+  <meta property="og:url" content="https://designcrafts.netlify.app/digital-marketing">
+  <meta property="og:type" content="website">
+
+  <!-- Twitter Card Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Digital Marketing Services - DesignCraft">
+  <meta name="twitter:description" content="Boost your online presence with DesignCraft's digital marketing services, including SEO, PPC, and social media marketing strategies to grow your business.">
+  <meta name="twitter:image" content="link-to-image.jpg">
+  
+  <!-- Link to External CSS -->
+  <link rel="stylesheet" href="style.css">
+
+  <!-- Favicon -->
+  <link rel="icon" href="images/favicon.png" type="image/x-icon">
+
+  <!-- Canonical Link to Avoid Duplicate Content Issues -->
+  <link rel="canonical" href="https://designcrafts.netlify.app/digital-marketing">
+
 </head>
-<body>
   <!-- Navbar -->
   <header>
     <nav class="navbar">
