--- a/pricing.html
+++ b/pricing.html
@@ -3,8 +3,35 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Prices Of DesignCraft</title>
-  <link rel="stylesheet" href="pricing.css">
+  
+  <!-- Title Tag -->
+  <title>Affordable IT Solutions Pricing | Web Development, App Development & Digital Marketing | DesignCraft</title>
+
+  <!-- Meta Description -->
+  <meta name="description" content="Explore competitive pricing for IT solutions at DesignCraft. Our pricing plans for web development, app development, and digital marketing are tailored to fit your business needs.">
+
+  <!-- Open Graph Tags for Social Media -->
+  <meta property="og:title" content="IT Solutions Pricing - DesignCraft">
+  <meta property="og:description" content="Get detailed pricing for DesignCraft's IT solutions, including web development, app development, and digital marketing services. Transparent and flexible plans for all businesses.">
+  <meta property="og:image" content="link-to-image.jpg">
+  <meta property="og:url" content="https://designcrafts.netlify.app/prices">
+  <meta property="og:type" content="website">
+
+  <!-- Twitter Card Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="IT Solutions Pricing - DesignCraft">
+  <meta name="twitter:description" content="Find the right pricing plan for your business with DesignCraft’s IT solutions. Offering affordable pricing for web development, app development, and digital marketing services.">
+  <meta name="twitter:image" content="link-to-image.jpg">
+  
+  <!-- Link to External CSS -->
+  <link rel="stylesheet" href="style.css">
+
+  <!-- Favicon -->
+  <link rel="icon" href="images/favicon.png" type="image/x-icon">
+
+  <!-- Canonical Link to Avoid Duplicate Content Issues -->
+  <link rel="canonical" href="https://designcrafts.netlify.app/prices">
+
 </head>
 <body>
   <!-- Navbar -->
