--- a/webdev.html
+++ b/webdev.html
@@ -3,8 +3,35 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>DesignCraft Websites</title>
-  <link rel="stylesheet" href="service.css">
+  
+  <!-- Title Tag -->
+  <title>Web Development Services | Custom Websites & Web Apps | DesignCraft</title>
+
+  <!-- Meta Description -->
+  <meta name="description" content="DesignCraft offers professional web development services, creating custom websites and web applications with modern technologies. Tailored solutions to grow your business online.">
+
+  <!-- Open Graph Tags for Social Media -->
+  <meta property="og:title" content="Web Development Services - DesignCraft">
+  <meta property="og:description" content="Build your online presence with DesignCraft's custom web development services. We specialize in responsive websites, web applications, and e-commerce platforms.">
+  <meta property="og:image" content="link-to-image.jpg">
+  <meta property="og:url" content="https://designcrafts.netlify.app/web-development">
+  <meta property="og:type" content="website">
+
+  <!-- Twitter Card Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Web Development Services - DesignCraft">
+  <meta name="twitter:description" content="Get a custom-built website or web app with DesignCraft's professional web development services. We deliver responsive, scalable solutions tailored to your needs.">
+  <meta name="twitter:image" content="link-to-image.jpg">
+  
+  <!-- Link to External CSS -->
+  <link rel="stylesheet" href="style.css">
+
+  <!-- Favicon -->
+  <link rel="icon" href="images/favicon.png" type="image/x-icon">
+
+  <!-- Canonical Link to Avoid Duplicate Content Issues -->
+  <link rel="canonical" href="https://designcrafts.netlify.app/web-development">
+
 </head>
 <body>
   <!-- Navbar -->
