--- a/index.html
+++ b/index.html
@@ -3,9 +3,36 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Welcome To DesignCraft</title>
+  
+  <!-- Title Tag -->
+  <title>IT Solutions Company | Web Development, App Development & Digital Marketing | DesignCraft</title>
+
+  <!-- Meta Description -->
+  <meta name="description" content="DesignCraft offers top-notch IT solutions including web development, app development, and digital marketing services. Tailored solutions for your business growth.">
+
+  <!-- Open Graph Tags for Social Media -->
+  <meta property="og:title" content="DesignCraft - IT Solutions Company">
+  <meta property="og:description" content="Explore DesignCraft for innovative IT solutions: web development, app development, and digital marketing services to boost your business.">
+  <meta property="og:image" content="link-to-image.jpg">
+  <meta property="og:url" content="https://designcrafts.netlify.app/">
+  <meta property="og:type" content="website">
+
+  <!-- Twitter Card Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="DesignCraft - IT Solutions Company">
+  <meta name="twitter:description" content="Explore DesignCraft for innovative IT solutions: web development, app development, and digital marketing services to boost your business.">
+  <meta name="twitter:image" content="link-to-image.jpg">
+  
+  <!-- Link to External CSS -->
   <link rel="stylesheet" href="style.css">
+
+  <!-- Favicon -->
+  <link rel="icon" href="images/favicon.png" type="image/x-icon">
+
+  <!-- Canonical Link to Avoid Duplicate Content Issues -->
+  <link rel="canonical" href="https://designcrafts.netlify.app/">
 </head>
+
 <body>
   <!-- Navbar -->
   <header>
