fixed css links

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
   <title>IT Solutions Company | Web Development, App Development & Digital Marketing | DesignCraft</title>
 
   <!-- Meta Description -->
-  <meta name="description" content="DesignCraft offers top-notch IT solutions including web development, app development, and digital marketing services. Tailored solutions for your business growth.">
+  <meta name="description" content="DesignCraft offers top-notch IT solutions including web development, app development, and digital marketing services. Tailored solutions to help your business grow online.">
 
   <!-- Open Graph Tags for Social Media -->
   <meta property="og:title" content="DesignCraft - IT Solutions Company">
   <meta property="og:description" content="Explore DesignCraft for innovative IT solutions: web development, app development, and digital marketing services to boost your business.">
-  <meta property="og:image" content="link-to-image.jpg">
+  <meta property="og:image" content="https://designcrafts.netlify.app/images/blog2"> <!-- Replace with actual image URL -->
   <meta property="og:url" content="https://designcrafts.netlify.app/">
   <meta property="og:type" content="website">
 
@@ -21,17 +21,18 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="DesignCraft - IT Solutions Company">
   <meta name="twitter:description" content="Explore DesignCraft for innovative IT solutions: web development, app development, and digital marketing services to boost your business.">
-  <meta name="twitter:image" content="link-to-image.jpg">
+  <meta name="twitter:image" content="#"> <!-- Replace with actual image URL -->
   
   <!-- Link to External CSS -->
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css"> <!-- Replace with actual CSS path -->
 
   <!-- Favicon -->
-  <link rel="icon" href="images/favicon.png" type="image/x-icon">
+  <link rel="icon" href="images/favicon.png" type="image/x-icon"> <!-- Replace with actual favicon path -->
 
   <!-- Canonical Link to Avoid Duplicate Content Issues -->
   <link rel="canonical" href="https://designcrafts.netlify.app/">
 </head>
+
 
 <body>
   <!-- Navbar -->
