--- a/pricing.html
+++ b/pricing.html
@@ -24,7 +24,7 @@
   <meta name="twitter:image" content="link-to-image.jpg">
   
   <!-- Link to External CSS -->
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="pricing.css">
 
   <!-- Favicon -->
   <link rel="icon" href="images/favicon.png" type="image/x-icon">
