added meta data

--- a/about.html
+++ b/about.html
@@ -3,9 +3,37 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About DesignCraft</title>
+  
+  <!-- Title Tag -->
+  <title>About DesignCraft - IT Solutions Company | Web Development, App Development & Digital Marketing</title>
+
+  <!-- Meta Description -->
+  <meta name="description" content="Learn more about DesignCraft, a leading IT solutions company offering web development, app development, and digital marketing services tailored for your business growth.">
+
+<!-- Open Graph Tags for Social Media -->
+<meta property="og:title" content="DesignCraft - IT Solutions Company">
+<meta property="og:description" content="Explore DesignCraft for innovative IT solutions: web development, app development, and digital marketing services to boost your business.">
+<meta property="og:image" content="https://designcrafts.netlify.app/images/blog2"> <!-- Replace with actual image URL -->
+<meta property="og:url" content="https://designcrafts.netlify.app/">
+<meta property="og:type" content="website">
+
+  <!-- Twitter Card Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="About DesignCraft - IT Solutions Company">
+  <meta name="twitter:description" content="Discover DesignCraft, a trusted partner for web development, app development, and digital marketing services to accelerate your business growth.">
+  <meta name="twitter:image" content="#"> <!-- Replace with actual image URL -->
+  
+  <!-- Link to External CSS -->
   <link rel="stylesheet" href="about.css">
+
+    <!-- Favicon -->
+    <link rel="icon" href="images/favicon.png" type="image/x-icon"> <!-- Replace with actual favicon path -->  
+
+    <!-- Canonical Link to Avoid Duplicate Content Issues -->
+  <link rel="canonical" href="https://designcrafts.netlify.app/about">
+  
 </head>
+
 <body>
   <!-- Navbar -->
   <header>
