--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
   <link rel="icon" href="images/favicon.png" type="image/x-icon">
 
   <!-- Canonical Link to Avoid Duplicate Content Issues -->
-  <link rel="canonical" href="https://designcrafts.netlify.app/contact-us">
+  <link rel="canonical" href="https://designcrafts.netlify.app/contact">
 
 </head>
 <body>
