--- a/pricing.html
+++ b/pricing.html
@@ -30,7 +30,7 @@
   <link rel="icon" href="images/favicon.png" type="image/x-icon">
 
   <!-- Canonical Link to Avoid Duplicate Content Issues -->
-  <link rel="canonical" href="https://designcrafts.netlify.app/prices">
+  <link rel="canonical" href="https://designcrafts.netlify.app/pricing">
 
 </head>
 <body>
