--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
   <!-- Open Graph Tags for Social Media -->
   <meta property="og:title" content="Contact Us - DesignCraft IT Solutions">
   <meta property="og:description" content="Contact DesignCraft for all your IT solutions needs. Whether you need web development, app development, or digital marketing, our team is ready to assist you.">
-  <meta property="og:image" content="link-to-image.jpg">
+  <meta property="og:image" content="https://designcrafts.netlify.app/images/blog1"> <!-- Replace with actual image URL -->
   <meta property="og:url" content="https://designcrafts.netlify.app/contact-us">
   <meta property="og:type" content="website">
 
