--- a/pricing.html
+++ b/pricing.html
@@ -13,7 +13,7 @@
   <!-- Open Graph Tags for Social Media -->
   <meta property="og:title" content="IT Solutions Pricing - DesignCraft">
   <meta property="og:description" content="Get detailed pricing for DesignCraft's IT solutions, including web development, app development, and digital marketing services. Transparent and flexible plans for all businesses.">
-  <meta property="og:image" content="link-to-image.jpg">
+  <meta property="og:image" content="https://designcrafts.netlify.app/images/blog1.png"> <!-- Replace with actual image URL -->
   <meta property="og:url" content="https://designcrafts.netlify.app/prices">
   <meta property="og:type" content="website">
 
