updated meta for career

--- a/careers.html
+++ b/careers.html
@@ -3,9 +3,36 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Careers At DesignCraft</title>
-  <link rel="stylesheet" href="career.css">
+  
+  <!-- Title Tag -->
+  <title>Careers at DesignCraft | Join Our Team of IT Innovators</title>
+
+  <!-- Meta Description -->
+  <meta name="description" content="Discover exciting career opportunities at DesignCraft. Join our team of experts in web development, app development, and digital marketing. Be part of the innovation!">
+
+  <!-- Open Graph Tags for Social Media -->
+  <meta property="og:title" content="Careers at DesignCraft">
+  <meta property="og:description" content="Explore career opportunities at DesignCraft and join our talented team of IT professionals. Shape the future with us!">
+  <meta property="og:image" content="https://designcrafts.netlify.app/images/careers-banner.png"> <!-- Replace with actual image URL -->
+  <meta property="og:url" content="https://designcrafts.netlify.app/careers">
+  <meta property="og:type" content="website">
+
+  <!-- Twitter Card Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Careers at DesignCraft">
+  <meta name="twitter:description" content="Explore career opportunities at DesignCraft and join our talented team of IT professionals. Shape the future with us!">
+  <meta name="twitter:image" content="https://designcrafts.netlify.app/images/blo3.png"> <!-- Replace with actual image URL -->
+  
+  <!-- Link to External CSS -->
+  <link rel="stylesheet" href="career.css"> <!-- Replace with actual CSS path -->
+
+  <!-- Favicon -->
+  <link rel="icon" href="images/favicon.png" type="image/x-icon"> <!-- Replace with actual favicon path -->
+
+  <!-- Canonical Link to Avoid Duplicate Content Issues -->
+  <link rel="canonical" href="https://designcrafts.netlify.app/careers">
 </head>
+
 <body>
   <!-- Navbar -->
   <header>
