Updated graphs met Content

--- a/pricing.html
+++ b/pricing.html
@@ -13,7 +13,7 @@
   <!-- Open Graph Tags for Social Media -->
   <meta property="og:title" content="IT Solutions Pricing - DesignCraft">
   <meta property="og:description" content="Get detailed pricing for DesignCraft's IT solutions, including web development, app development, and digital marketing services. Transparent and flexible plans for all businesses.">
-  <meta property="og:image" content="https://designcrafts.netlify.app/images/blog1.png"> <!-- Replace with actual image URL -->
+  <meta property="og:image" content="https://designcrafts.netlify.app/images/homepage.png"> <!-- Replace with actual image URL --> <!-- Replace with actual image URL -->
   <meta property="og:url" content="https://designcrafts.netlify.app/prices">
   <meta property="og:type" content="website">
 
@@ -21,7 +21,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="IT Solutions Pricing - DesignCraft">
   <meta name="twitter:description" content="Find the right pricing plan for your business with DesignCraft’s IT solutions. Offering affordable pricing for web development, app development, and digital marketing services.">
-  <meta name="twitter:image" content="link-to-image.jpg">
+  <meta name="twitter:image" content="https://designcrafts.netlify.app/images/homepage.png">
   
   <!-- Link to External CSS -->
   <link rel="stylesheet" href="pricing.css">
