--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 <!-- Open Graph Tags for Social Media -->
 <meta property="og:title" content="DesignCraft - IT Solutions Company">
 <meta property="og:description" content="Explore DesignCraft for innovative IT solutions: web development, app development, and digital marketing services to boost your business.">
-<meta property="og:image" content="https://designcrafts.netlify.app/images/blog1"> <!-- Replace with actual image URL -->
+<meta property="og:image" content="https://designcrafts.netlify.app/images/homepage.png"> <!-- Replace with actual image URL -->
 <meta property="og:url" content="https://designcrafts.netlify.app/">
 <meta property="og:type" content="website">
 
@@ -21,7 +21,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="About DesignCraft - IT Solutions Company">
   <meta name="twitter:description" content="Discover DesignCraft, a trusted partner for web development, app development, and digital marketing services to accelerate your business growth.">
-  <meta name="twitter:image" content="#"> <!-- Replace with actual image URL -->
+  <meta name="twitter:image" content="https://designcrafts.netlify.app/images/homepage.png">
   
   <!-- Link to External CSS -->
   <link rel="stylesheet" href="about.css">
