--- a/careers.html
+++ b/careers.html
@@ -13,7 +13,7 @@
   <!-- Open Graph Tags for Social Media -->
   <meta property="og:title" content="Careers at DesignCraft">
   <meta property="og:description" content="Explore career opportunities at DesignCraft and join our talented team of IT professionals. Shape the future with us!">
-  <meta property="og:image" content="https://designcrafts.netlify.app/images/careers-banner.png"> <!-- Replace with actual image URL -->
+  <meta property="og:image" content="https://designcrafts.netlify.app/images/homepage.png"> <!-- Replace with actual image URL --><!-- Replace with actual image URL -->
   <meta property="og:url" content="https://designcrafts.netlify.app/careers">
   <meta property="og:type" content="website">
 
@@ -21,7 +21,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Careers at DesignCraft">
   <meta name="twitter:description" content="Explore career opportunities at DesignCraft and join our talented team of IT professionals. Shape the future with us!">
-  <meta name="twitter:image" content="https://designcrafts.netlify.app/images/blo3.png"> <!-- Replace with actual image URL -->
+  <meta name="twitter:image" content="https://designcrafts.netlify.app/images/homepage.png">
   
   <!-- Link to External CSS -->
   <link rel="stylesheet" href="career.css"> <!-- Replace with actual CSS path -->
