--- a/about.html
+++ b/about.html
@@ -10,12 +10,14 @@
   <!-- Meta Description -->
   <meta name="description" content="Learn more about DesignCraft, a leading IT solutions company offering web development, app development, and digital marketing services tailored for your business growth.">
 
-<!-- Open Graph Tags for Social Media -->
-<meta property="og:title" content="DesignCraft - IT Solutions Company">
-<meta property="og:description" content="Explore DesignCraft for innovative IT solutions: web development, app development, and digital marketing services to boost your business.">
-<meta property="og:image" content="https://designcrafts.netlify.app/images/homepage.png"> <!-- Replace with actual image URL -->
-<meta property="og:url" content="https://designcrafts.netlify.app/">
-<meta property="og:type" content="website">
+  <!-- Open Graph Tags -->
+  <meta property="og:title" content="DesignCraft - IT Solutions">
+  <meta property="og:description" content="Boost your business with IT solutions including web development, app development, and digital marketing services.">
+  <meta property="og:image" content="https://designcrafts.netlify.app/images/share-image.png">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta property="og:url" content="https://designcrafts.netlify.app/">
+  <meta property="og:type" content="website">
 
   <!-- Twitter Card Tags -->
   <meta name="twitter:card" content="summary_large_image">
