--- a/pricing.html
+++ b/pricing.html
@@ -9,12 +9,14 @@
 
   <!-- Meta Description -->
   <meta name="description" content="Explore competitive pricing for IT solutions at DesignCraft. Our pricing plans for web development, app development, and digital marketing are tailored to fit your business needs.">
-
-  <!-- Open Graph Tags for Social Media -->
-  <meta property="og:title" content="IT Solutions Pricing - DesignCraft">
-  <meta property="og:description" content="Get detailed pricing for DesignCraft's IT solutions, including web development, app development, and digital marketing services. Transparent and flexible plans for all businesses.">
-  <meta property="og:image" content="https://designcrafts.netlify.app/images/homepage.png"> <!-- Replace with actual image URL --> <!-- Replace with actual image URL -->
-  <meta property="og:url" content="https://designcrafts.netlify.app/prices">
+ 
+  <!-- Open Graph Tags -->
+  <meta property="og:title" content="DesignCraft - IT Solutions">
+  <meta property="og:description" content="Boost your business with IT solutions including web development, app development, and digital marketing services.">
+  <meta property="og:image" content="https://designcrafts.netlify.app/images/share-image.png">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta property="og:url" content="https://designcrafts.netlify.app/">
   <meta property="og:type" content="website">
 
   <!-- Twitter Card Tags -->
