--- a/pricing.html
+++ b/pricing.html
@@ -11,7 +11,7 @@
   <meta name="description" content="Explore competitive pricing for IT solutions at DesignCraft. Our pricing plans for web development, app development, and digital marketing are tailored to fit your business needs.">
  
   <!-- Open Graph Tags -->
-  <meta property="og:title" content="DesignCraft - IT Solutions">
+  <meta property="og:title" content="DesignCraft - IT Solutions- Web Development, App Development & Digital Marketing Services">
   <meta property="og:description" content="Boost your business with IT solutions including web development, app development, and digital marketing services.">
   <meta property="og:image" content="https://designcrafts.netlify.app/images/share-image.png">
   <meta property="og:image:width" content="1200">
