--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
   <meta name="description" content="Learn more about DesignCraft, a leading IT solutions company offering web development, app development, and digital marketing services tailored for your business growth.">
 
   <!-- Open Graph Tags -->
-  <meta property="og:title" content="DesignCraft - IT Solutions">
+  <meta property="og:title" content="DesignCraft - IT Solutions- Web Development, App Development & Digital Marketing Services">
   <meta property="og:description" content="Boost your business with IT solutions including web development, app development, and digital marketing services.">
   <meta property="og:image" content="https://designcrafts.netlify.app/images/share-image.png">
   <meta property="og:image:width" content="1200">
