--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
   <meta name="twitter:title" content="DesignCraft - IT Solutions Company">
   <meta name="twitter:description" content="Explore DesignCraft for innovative IT solutions: web development, app development, and digital marketing services to boost your business.">
   <meta name="twitter:image" content="https://designcrafts.netlify.app/images/homepage.png">
+
+  <!-- Hreflang Tags for Regional SEO -->
+<link rel="alternate" hreflang="en-za" href="https://designcrafts.netlify.app/en-za/" />
+<link rel="alternate" hreflang="en-us" href="https://designcrafts.netlify.app/en-us/" />
+<link rel="alternate" hreflang="fr-fr" href="https://designcrafts.netlify.app/fr-fr/" />
+
   
   <!-- Link to External CSS -->
   <link rel="stylesheet" href="style.css"> <!-- Replace with actual CSS path -->
